Initial implementation of authentication api
