# api/controllers/userController.js
@@ -4,7 +4,9 @@ var util = require('util');
 var db = require('../db')
 
 module.exports = {
-  usersPut: usersPut
+  usersPut: usersPut,
+  usersLogin: usersLogin,
+  usersLogout: usersLogout
 };
 
 function usersPut(req, res) {
@@ -18,7 +20,6 @@ function usersPut(req, res) {
   var email = req.swagger.params.userInfo.value.email;
 
   if ((birthDay>0 && birthDay<32) && (birthMonth>0 && birthMonth<13) && birthYear) {
-
     db.users.findById(id)
       .then(user => {
         if (user) {
@@ -42,4 +43,15 @@ function usersPut(req, res) {
   } else {
     res.json({'message': 'Wrong date'}, 400);
   }
+}
+
+function usersLogin(req, res) {
+  var email    = req.swagger.params.userCredentials.value.email;
+  var password = req.swagger.params.userCredentials.value.password;
+  console.log("Username: " + email);
+  console.log("Password: " + password);
+  res.json({'token': 'OK'}, 200);
+}
+
+function usersLogout(req, res) {
 }
